--- a/Example.ipynb
+++ b/Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnkXsaMIvpBwz6WYnNIq1U",
+      "authorship_tag": "ABX9TyMbUSAfipDuG/xRL9TyU4Mq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Clone the repository containing the functions and photometric sample files."
+        "#Clone the repository that contains the functions and the photometric sample files."
       ],
       "metadata": {
         "id": "nZw8ttJygkIH"
@@ -74,22 +74,10 @@
         "print(\"Lumen:\",Lumen,\", Factor:\", fact,\", #Vert:\",Num_vert_angle ,\", #Horiz:\",Num_hori_angle,\", Units:\", unid, \"(1:feet, 2:meters)\")"
       ],
       "metadata": {
-        "id": "s-7lr9WVdcrj",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "74358c7b-ef5c-498a-d480-066389ba5a13"
+        "id": "s-7lr9WVdcrj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Lumen: 3350 , Factor: 1.0 , #Vert: 37 , #Horiz: 7 , Unidades: 2 (1:pies, 2:Metros)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
