Update repository links and improve markdown comments

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbUSAfipDuG/xRL9TyU4Mq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,36 +22,46 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/anvargasch/IEStoPRBT/blob/main/Example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/anvargasch/IEStoPBRT/blob/main/Example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#Clone the repository that contains the functions and the photometric sample files."
+        "# Clone the repository containing the conversion functions and sample IES files"
       ],
       "metadata": {
-        "id": "nZw8ttJygkIH"
+        "id": "clone-repo"
       }
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "MCsXa2-FJif8"
+        "id": "clone-code"
       },
       "outputs": [],
       "source": [
-        "!git clone https://github.com/anvargasch/IEStoPRBT.git"
+        "!git clone https://github.com/anvargasch/IEStoPBRT.git\n",
+        "%cd IEStoPBRT"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Install dependencies"
+      ],
+      "metadata": {
+        "id": "install-deps"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "from IEStoPRBT import readIES"
+        "!pip install -r requirements.txt"
       ],
       "metadata": {
-        "id": "_U1PJXwxMFDc"
+        "id": "pip-install"
       },
       "execution_count": null,
       "outputs": []
@@ -60,74 +69,86 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Example of reading an IES file and downloading the header and intensity matrix"
+        "# Import the converter"
       ],
       "metadata": {
-        "id": "7bMLSuuIMLBC"
+        "id": "import-converter"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "filename = '/content/IEStoPRBT/IESfiles/IESsiemens.ies'  # Replace with the path to your IES file\n",
-        "Lumen,fact,Num_vert_angle,Num_hori_angle,unid = readIES.IES_header(filename) # Function to return the phometrics parameters\n",
-        "print(\"Lumen:\",Lumen,\", Factor:\", fact,\", #Vert:\",Num_vert_angle ,\", #Horiz:\",Num_hori_angle,\", Units:\", unid, \"(1:feet, 2:meters)\")"
+        "import sys\n",
+        "sys.path.append(\"/content/IEStoPBRT\")\n",
+        "\n",
+        "import ies2exr"
       ],
       "metadata": {
-        "id": "s-7lr9WVdcrj"
+        "id": "import-code"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "filename = '/content/IEStoPRBT/IESfiles/IESsiemens.ies'# Replace with the path to your IES file\n",
-        "mat=readIES.IES_Intensity_matrix (filename) # Function to return the intensity matrix\n",
-        "print(mat)"
+        "# Example: convert an IES file into an EXR"
       ],
       "metadata": {
-        "id": "RO_wW4fR2iaB"
+        "id": "example-header"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filename = \"IESfiles/IESsiemens.ies\"   # Replace with your own IES file\n",
+        "output   = \"IESsiemens.exr\"\n",
+        "\n",
+        "meta = ies2exr.ies_to_exr(filename, output, width=1024, height=512)\n",
+        "print(\"Metadata:\", meta)"
+      ],
+      "metadata": {
+        "id": "convert-example"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "filename = '/content/IEStoPRBT/IESfiles/IESsiemens.ies' # Replace with the path to your IES file\n",
-        "img=readIES.IES2PBRT (filename)  #Function to return an image for use in PBRT"
+        "# Visualize the generated photometric image"
       ],
       "metadata": {
-        "id": "AGCYi04Nddwj"
+        "id": "visualize"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import imageio.v3 as iio\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "img = iio.imread(output)\n",
+        "plt.figure(figsize=(12,4))\n",
+        "plt.imshow(img[:,:,0], cmap='gray')\n",
+        "plt.title('Goniometric Image for PBRT')\n",
+        "plt.colorbar(label='Candela values')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "plot-code"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import matplotlib.pyplot as plt   # Graphing functions\n",
-        "plt.figure(1)\n",
-        "plt.imshow(img ,cmap=plt.cm.gray), plt.title(\"Imagen IES\")\n",
-        "plt.imshow"
+        "# The EXR file is now ready to be used in PBRT as a goniometric light source."
       ],
       "metadata": {
-        "id": "r2CHH5XydhNK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "readIES.save_EXR(img,'/content/IMG_EXR10.exr') #Function to save the PBRT image in EXR format"
-      ],
-      "metadata": {
-        "id": "9gZg7TzhduMq"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "pbrt-ready"
+      }
     }
   ]
 }
