Modify package installation and add EXR saving patch
Updated package installation and added EXR saving patch.

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -58,10 +58,47 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -r requirements.txt"
+        "!pip -q install numpy imageio opencv-python"
       ],
       "metadata": {
         "id": "pip-install"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Patch EXR saving in Colab (fallback to OpenCV if imageio fails)"
+      ],
+      "metadata": {
+        "id": "patch-exr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import cv2\n",
+        "import imageio.v3 as iio\n",
+        "\n",
+        "# Save original imwrite\n",
+        "_iio_orig_imwrite = iio.imwrite\n",
+        "\n",
+        "def _imwrite_exr_patch(uri, img, **kwargs):\n",
+        "    if str(uri).lower().endswith(\".exr\"):\n",
+        "        ok = cv2.imwrite(str(uri), img.astype(np.float32))\n",
+        "        if not ok:\n",
+        "            raise RuntimeError(f\"OpenCV couldn't write EXR: {uri}\")\n",
+        "    else:\n",
+        "        _iio_orig_imwrite(uri, img, **kwargs)\n",
+        "\n",
+        "# Apply patch\n",
+        "iio.imwrite = _imwrite_exr_patch\n",
+        "print(\"✅ Patched EXR saving (using OpenCV fallback)\")"
+      ],
+      "metadata": {
+        "id": "patch-code"
       },
       "execution_count": null,
       "outputs": []
