Modify installation instructions and clean up code
Updated installation instructions and removed EXR patch code.

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -49,7 +49,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Install dependencies"
+        "# Install dependencies (with EXR support via freeimage)"
       ],
       "metadata": {
         "id": "install-deps"
@@ -58,47 +58,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip -q install numpy imageio opencv-python"
+        "!pip install -q imageio[freeimage] numpy"
       ],
       "metadata": {
         "id": "pip-install"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Patch EXR saving in Colab (fallback to OpenCV if imageio fails)"
-      ],
-      "metadata": {
-        "id": "patch-exr"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import cv2\n",
-        "import imageio.v3 as iio\n",
-        "\n",
-        "# Save original imwrite\n",
-        "_iio_orig_imwrite = iio.imwrite\n",
-        "\n",
-        "def _imwrite_exr_patch(uri, img, **kwargs):\n",
-        "    if str(uri).lower().endswith(\".exr\"):\n",
-        "        ok = cv2.imwrite(str(uri), img.astype(np.float32))\n",
-        "        if not ok:\n",
-        "            raise RuntimeError(f\"OpenCV couldn't write EXR: {uri}\")\n",
-        "    else:\n",
-        "        _iio_orig_imwrite(uri, img, **kwargs)\n",
-        "\n",
-        "# Apply patch\n",
-        "iio.imwrite = _imwrite_exr_patch\n",
-        "print(\"✅ Patched EXR saving (using OpenCV fallback)\")"
-      ],
-      "metadata": {
-        "id": "patch-code"
       },
       "execution_count": null,
       "outputs": []
@@ -189,3 +152,4 @@
     }
   ]
 }
+
