Refactor Example.ipynb for clarity and updates

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Clone the repository containing the conversion functions and sample IES files"
+        "# Clone the repository"
       ],
       "metadata": {
         "id": "clone-repo"
@@ -49,7 +49,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Install dependencies (with EXR support via freeimage)"
+        "# Install dependencies"
       ],
       "metadata": {
         "id": "install-deps"
@@ -58,7 +58,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -q imageio[freeimage] numpy"
+        "!pip install numpy matplotlib openexr imath"
       ],
       "metadata": {
         "id": "pip-install"
@@ -79,7 +79,7 @@
       "cell_type": "code",
       "source": [
         "import sys\n",
-        "sys.path.append(\"/content/IEStoPBRT\")\n",
+        "sys.path.append(\"/content/IEStoPBRT\")  # adjust if needed\n",
         "\n",
         "import ies2exr"
       ],
@@ -116,7 +116,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Visualize the generated photometric image"
+        "# Visualize the generated photometric EXR (R channel)"
       ],
       "metadata": {
         "id": "visualize"
@@ -125,13 +125,21 @@
     {
       "cell_type": "code",
       "source": [
-        "import imageio.v3 as iio\n",
+        "import OpenEXR, Imath\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "img = iio.imread(output)\n",
+        "exr = OpenEXR.InputFile(output)\n",
+        "dw = exr.header()['dataWindow']\n",
+        "width = dw.max.x - dw.min.x + 1\n",
+        "height = dw.max.y - dw.min.y + 1\n",
+        "\n",
+        "pt = Imath.PixelType(Imath.PixelType.FLOAT)\n",
+        "r = np.frombuffer(exr.channel('R', pt), dtype=np.float32).reshape((height, width))\n",
+        "\n",
         "plt.figure(figsize=(12,4))\n",
-        "plt.imshow(img[:,:,0], cmap='gray')\n",
-        "plt.title('Goniometric Image for PBRT')\n",
+        "plt.imshow(r, cmap='gray')\n",
+        "plt.title('Photometric EXR (R channel)')\n",
         "plt.colorbar(label='Candela values')\n",
         "plt.show()"
       ],
