Refactor Example.ipynb for better readability
Updated the Example.ipynb notebook to improve clarity and functionality.

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -58,7 +58,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install numpy matplotlib openexr imath"
+        "!pip install numpy matplotlib pyexr opencv-python"
       ],
       "metadata": {
         "id": "pip-install"
@@ -92,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Example: convert an IES file into an EXR"
+        "# Example: convert an IES file into a normalized EXR for PBRT"
       ],
       "metadata": {
         "id": "example-header"
@@ -102,10 +102,16 @@
       "cell_type": "code",
       "source": [
         "filename = \"IESfiles/IESsiemens.ies\"   # Replace with your own IES file\n",
-        "output   = \"IESsiemens.exr\"\n",
+        "output   = \"IESsiemens_square.exr\"\n",
         "\n",
-        "meta = ies2exr.ies_to_exr(filename, output, width=1024, height=512)\n",
-        "print(\"Metadata:\", meta)"
+        "# Generate a square, lat-long, normalized EXR\n",
+        "meta = ies2exr.ies_to_exr(filename, output, size=1024)\n",
+        "print(\"Metadata:\")\n",
+        "for k, v in meta.items():\n",
+        "    print(f\"  {k}: {v}\")\n",
+        "\n",
+        "print(\"\\nRecommended PBRT power (lumens):\",\n",
+        "      f\"{meta['recommended_power_lm']:.2f}\")"
       ],
       "metadata": {
         "id": "convert-example"
@@ -116,7 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Visualize the generated photometric EXR (R channel)"
+        "# Visualize the generated normalized EXR (R channel)"
       ],
       "metadata": {
         "id": "visualize"
@@ -125,22 +131,19 @@
     {
       "cell_type": "code",
       "source": [
-        "import OpenEXR, Imath\n",
+        "import pyexr\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "exr = OpenEXR.InputFile(output)\n",
-        "dw = exr.header()['dataWindow']\n",
-        "width = dw.max.x - dw.min.x + 1\n",
-        "height = dw.max.y - dw.min.y + 1\n",
+        "# Read EXR with pyexr (H, W, 3)\n",
+        "img = pyexr.read(output)\n",
+        "r = img[:, :, 0]\n",
         "\n",
-        "pt = Imath.PixelType(Imath.PixelType.FLOAT)\n",
-        "r = np.frombuffer(exr.channel('R', pt), dtype=np.float32).reshape((height, width))\n",
-        "\n",
-        "plt.figure(figsize=(12,4))\n",
+        "plt.figure(figsize=(6, 6))\n",
         "plt.imshow(r, cmap='gray')\n",
-        "plt.title('Photometric EXR (R channel)')\n",
-        "plt.colorbar(label='Candela values')\n",
+        "plt.title('Normalized luminous intensity (R channel)')\n",
+        "plt.colorbar(label='Relative intensity (normalized)')\n",
+        "plt.axis('off')\n",
         "plt.show()"
       ],
       "metadata": {
@@ -152,7 +155,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# The EXR file is now ready to be used in PBRT as a goniometric light source."
+        "# The EXR file is now ready to be used in PBRT as a goniometric light source.\n",
+        "\n",
+        "Use the generated EXR as a lat-long texture and set the PBRT light power to the value given by `meta['recommended_power_lm']` so that the luminous flux in PBRT matches the integrated flux from the original IES file."
       ],
       "metadata": {
         "id": "pbrt-ready"
@@ -160,3 +165,5 @@
     }
   ]
 }
+
+
