--- a/Example.ipynb
+++ b/Example.ipynb
@@ -17,29 +17,35 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
+      "metadata": {},
       "source": [
         "<a href=\"https://colab.research.google.com/github/anvargasch/IEStoPBRT/blob/main/Example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Clone the repository"
-      ],
-      "metadata": {
-        "id": "clone-repo"
-      }
+        "# IES → EXR converter for PBRT (Type C)\n",
+        "\n",
+        "This notebook converts an **IES Type C (LM-63)** photometric file into a **normalized lat-long EXR** suitable for **PBRT v4 goniometric lights**.\n",
+        "\n",
+        "- Angularly correct interpolation (no resampling artifacts)\n",
+        "- Solid-angle normalization (∫ f dΩ = 1)\n",
+        "- No assumptions about luminous flux\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1. Clone the repository"
+      ]
     },
     {
       "cell_type": "code",
+      "metadata": {},
       "execution_count": null,
-      "metadata": {
-        "id": "clone-code"
-      },
       "outputs": [],
       "source": [
         "!git clone https://github.com/anvargasch/IEStoPBRT.git\n",
@@ -48,122 +54,112 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Install dependencies"
-      ],
-      "metadata": {
-        "id": "install-deps"
-      }
+        "## 2. Install dependencies"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install numpy matplotlib pyexr opencv-python"
-      ],
-      "metadata": {
-        "id": "pip-install"
-      },
+      "metadata": {},
       "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install numpy pyexr matplotlib"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Import the converter"
-      ],
-      "metadata": {
-        "id": "import-converter"
-      }
+        "## 3. Import the converter"
+      ]
     },
     {
       "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
       "source": [
         "import sys\n",
-        "sys.path.append(\"/content/IEStoPBRT\")  # adjust if needed\n",
+        "sys.path.append('/content/IEStoPBRT')\n",
         "\n",
-        "import ies2exr"
-      ],
-      "metadata": {
-        "id": "import-code"
-      },
-      "execution_count": null,
-      "outputs": []
+        "import importlib\n",
+        "import ies2exr\n",
+        "importlib.reload(ies2exr)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Example: convert an IES file into a normalized EXR for PBRT"
-      ],
-      "metadata": {
-        "id": "example-header"
-      }
+        "## 4. Convert an IES file to EXR"
+      ]
     },
     {
       "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
       "source": [
-        "filename = \"IESfiles/IESsiemens.ies\"   # Replace with your own IES file\n",
-        "output   = \"IESsiemens_square.exr\"\n",
+        "filename = 'IESfiles/IESsiemens.ies'   # replace with your IES file\n",
+        "output   = 'IESsiemens_latlong.exr'\n",
         "\n",
-        "# Generate a square, lat-long, normalized EXR\n",
         "meta = ies2exr.ies_to_exr(filename, output, size=1024)\n",
-        "print(\"Metadata:\")\n",
-        "for k, v in meta.items():\n",
-        "    print(f\"  {k}: {v}\")\n",
         "\n",
-        "print(\"\\nRecommended PBRT power (lumens):\",\n",
-        "      f\"{meta['recommended_power_lm']:.2f}\")"
-      ],
-      "metadata": {
-        "id": "convert-example"
-      },
-      "execution_count": null,
-      "outputs": []
+        "print('Conversion completed.')\n",
+        "print('Metadata:')\n",
+        "for k, v in meta.items():\n",
+        "    print(f'  {k}: {v}')"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Visualize the generated normalized EXR (R channel)"
-      ],
-      "metadata": {
-        "id": "visualize"
-      }
+        "## 5. Visualize the generated EXR (R channel)"
+      ]
     },
     {
       "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
       "source": [
         "import pyexr\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Read EXR with pyexr (H, W, 3)\n",
         "img = pyexr.read(output)\n",
         "r = img[:, :, 0]\n",
         "\n",
         "plt.figure(figsize=(6, 6))\n",
         "plt.imshow(r, cmap='gray')\n",
-        "plt.title('Normalized luminous intensity (R channel)')\n",
-        "plt.colorbar(label='Relative intensity (normalized)')\n",
+        "plt.title('Normalized angular intensity (lat-long)')\n",
+        "plt.colorbar(label='Relative intensity')\n",
         "plt.axis('off')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "plot-code"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# The EXR file is now ready to be used in PBRT as a goniometric light source.\n",
+        "## 6. Usage in PBRT\n",
         "\n",
-        "Use the generated EXR as a lat-long texture and set the PBRT light power to the value given by `meta['recommended_power_lm']` so that the luminous flux in PBRT matches the integrated flux from the original IES file."
-      ],
-      "metadata": {
-        "id": "pbrt-ready"
-      }
+        "The generated EXR represents a **normalized angular distribution**.\n",
+        "\n",
+        "In PBRT v4, use it as a `goniometric` light source and specify the **nominal luminous flux** directly:\n",
+        "\n",
+        "```pbrt\n",
+        "LightSource \"goniometric\"\n",
+        "    \"string filename\" [\"IESsiemens_latlong.exr\"]\n",
+        "    \"blackbody I\" [2700]\n",
+        "    \"float power\" [<nominal lumens>]\n",
+        "```\n",
+        "\n",
+        "No additional scaling is applied inside the EXR.\n"
+      ]
     }
   ]
 }
-
-
